// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendModal disables sending if not connected 1`] = `
<action-modal-stub
  submissionerror=""
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="mycoin"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="tb1mjt6dcdru8lgdz64h2fu0lrzvd5zv8sfcvkv2l"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <tm-form-msg-stub
      max="0"
      min="0"
      msg=""
      name="Amount"
      type="between"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value="1234567890"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="disabled"
      value="Connecting..."
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal has the expected html structure 1`] = `
<action-modal-stub
  submissionerror=""
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal should show address required error 1`] = `
<action-modal-stub
  submissionerror=""
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-denomination"
      >
        Denomination
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <div
          class="tm-select"
          id="send-denomination"
        >
          <select
            class="tm-field tm-field-select"
          >
            <option
              disabled="disabled"
              hidden="hidden"
              selected="selected"
              value=""
            >
              Select token...
            </option>
             
            <option
              value="mycoin"
            >
              MYCOIN
            </option>
            <option
              value="fermion"
            >
              FERMION
            </option>
          </select>
           
          <div
            class="tm-field-select-addon"
          >
            <i
              class="material-icons"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group tm-form-group--error"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-address"
      >
        Send To
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <div
          class="tm-field-group"
        >
          <input
            class="tm-field"
            id="send-address"
            placeholder="Address"
            type="text"
          />
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="send-amount"
      >
        Amount
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <div
          class="tm-field-group"
        >
          <input
            class="tm-field"
            id="send-amount"
            max="2300"
            min="1"
            placeholder="Amount"
            type="number"
          />
        </div>
         
        <!---->
         
        <!---->
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="tm-form-group"
    >
      <!---->
      <label
        class="tm-form-group__label"
        for="password"
      >
        Password
      </label>
       
      <div
        class="tm-form-group__field"
      >
        <input
          class="tm-field"
          id="password"
          placeholder="Password"
          type="password"
        />
         
        <div
          class="tm-form-msg sm tm-form-msg--error"
        >
          Password is required
        </div>
      </div>
    </div>
     
  </div>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <div>
      <button
        class="tm-btn"
        id="send-btn"
      >
        <span
          class="tm-btn__container tm-btn--primary"
        >
          <!---->
          <span
            class="tm-btn__value"
          >
            Send Tokens
          </span>
        </span>
      </button>
    </div>
  </div>
</action-modal-stub>
`;

exports[`SendModal should show bech32 error when address length is too long 1`] = `
<action-modal-stub
  submissionerror=""
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
    />
     
    <tm-form-msg-stub
      body="No separator character for asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
      msg=""
      name="Address"
      type="bech32"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value="1234567890"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal should show bech32 error when address length is too short 1`] = `
<action-modal-stub
  submissionerror=""
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdf"
    />
     
    <tm-form-msg-stub
      body="asdf too short"
      msg=""
      name="Address"
      type="bech32"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value="1234567890"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;

exports[`SendModal should show bech32 error when alphanumeric is wrong 1`] = `
<action-modal-stub
  submissionerror=""
  title="Send"
>
  <tm-form-group-stub
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tm-field-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tm-field-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tm-form-msg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    error="true"
    fieldid="send-amount"
    fieldlabel="Amount"
  >
    <tm-field-stub
      id="send-amount"
      placeholder="Amount"
      type="number"
      value=""
    />
     
    <tm-form-msg-stub
      msg=""
      name="Amount"
      type="required"
    />
  </tm-form-group-stub>
   
  <tm-form-group-stub
    fieldid="password"
    fieldlabel="Password"
  >
    <tm-field-stub
      id="password"
      placeholder="Password"
      type="password"
      value=""
    />
     
    <!---->
  </tm-form-group-stub>
   
  <div>
    <tm-btn-stub
      color="primary"
      disabled="true"
      id="send-btn"
      value="Send Tokens"
    />
  </div>
</action-modal-stub>
`;
